--- a/polen-front/package.json
+++ b/polen-front/package.json
@@ -8,8 +8,7 @@
     "test": "ng test",
     "test:local": "ng test --browsers=ChromeNoSandbox",
     "test:ci": "ng test --browsers=ChromeHeadlessNoSandbox --watch=false --code-coverage=true",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
